Discussion: language + some new refs

--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,7 @@ While this co-existence of multiple alternative solutions for looming detection 
 
 Traditionally, the golden standard for describing a mechanism of a behavior was to demonstrate that activation of a certain structure is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same network statistics as a normal brain would not necessarily tell us how to “fix” it, even if we had a method to rewire individual neurons in a targeted fashion.
 
-A more promising approach is to study the origin of functional structures in the brain. Most neural networks are not truly hardwired, but dynamically evolve from a set of developmental rules \citep{pietri2017emergence}, similar to how it happens for Turing patterns or fractals \citep{lefevre2010reaction,bullmore2012economy}, while also relying on streams of structured sensory information coming from the external world \citep{gao2015simplicity}. This insight is encouraging, as agents that follow these developmental rules are individual cells and their compartments, such as active dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. Together, it may mean that our best chance to truly “understand” the brain lies in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach already proved to be fruitful, as several complex network phenomena, including high-order receptive fields [ref], grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
+A more promising approach is to study the origin of functional structures in the brain. Most neural networks are not truly hardwired, but dynamically evolve from a set of developmental rules [xxxnon-Pietri ref], similar to how it happens for Turing patterns or fractals \citep{lefevre2010reaction,bullmore2012economy}, while also relying on streams of structured sensory information coming from the external world \citep{gao2015simplicity}. This insight is encouraging, as these developmental rules are followed by individual cells and their compartments, such as dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. Together, it may mean that our best chance to truly “understand” the brain lies in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach already proved to be fruitful, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
 
 In this paper, we look at connectomic correlates of looming selectivity in the developing optic tectum of \textit{Xenopus} tadpoles. Tadpole tectum is a model uniquely suitable for studies of sensory integration, as its neurons are excessively plastic \citep{pratt2007intrinsic}[Busch], strongly connected to each other \citep{james2015}[refs], and develop reliable looming selectivity within about a week, as tadpoles mature from developmental stage 46 to stage 49 \citep{dong2009,khakhalin2014}. The refinement of tectal connectivity is dominated by spike-time-dependent plasticity \citep{zhang1998stdp,mu2006stdp}, which is known to favor development of synfire chains \citep{fiete2010chains,zheng2014synfire}: groups of neurons linked with sequential connections that selectively respond to certain patterns of temporal activation \citep{clopath2010stdpcoding}. As  tectal neurons spike relatively slowly, with broad spikes and long refractory periods \citep{ciarleglio2015,jang2016}, these synfire chains are expected to have delays of about 10 ms from one neuron to another, compared to $\sim$2 ms in the mammalian cortex [ref]. This slower signal propagation brings intratectal connections to the threshold of direct detectability by fast Ca imaging techniques that operate at rates of ~100 frames/s, allowing observations of not just co-firing of neurons within each ensemble or clique \citep{reimann2017,avitan2017spontaneous}, but propagation of signal through these ensembles.
 
@@ -266,17 +266,17 @@ Disruption of different developmental rules led to very different changes in net
 
 \section*{Discussion}
 
-In this study, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual stimuli, would 1) spontaneously develop a non-random network structure, and 2) acquire selectivity for looming stimuli. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for our hypothesis is however mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly trivial results were not verified in biological experiments, as we observed no improvement in looming detection, as neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising as an improvement in collision detection was previously described in behavioral studies \citep{dong2009}.
+In this study, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously develop a non-random network structure, and 2) acquire selectivity for looming stimuli. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for our hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly trivial results were not verified in biological experiments, as we observed no improvement in looming detection in development, as neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
 
-The model also developed a non-random structure, with several key network parameters (efficiency, modularity, clustering, and hierarchy) significantly different from what would be expected in a randomized network. Most network parameters also changed with model development, yet except for changes in degree distribution and modularity, we did not detect similar network differences between younger and older tadpoles. This suggests that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even slowly reversed in late development, which means that even for a qualitative comparison between the model and the experiment we need an important assumption about whether stage 46 tadpoles correspond to a mid-point of development, or whether they already fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, may suggest that both stages fall on the “plateau” of tectal network development. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor connections from the tectum to the hindbrain, which we did not assess in this study.
+The model also developed a non-random structure, with several key network properties (efficiency, modularity, clustering, and hierarchy) becoming significantly different from matching values in a randomized network. Most of these properties also changed with model development, yet except for changes in degree distribution and modularity, we did not detect similar network differences between younger and older tadpoles. This may suggest that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even slowly reversed in late development, which means that even for a qualitative comparison between the model and the experiment we have to make an important assumption about whether stage 46 tadpoles correspond to a mid-point of development, or whether they fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor connections from the tectum to the hindbrain, which we did not assess in this study.
 
-The changes in degree distribution, observed both in the model and in imaging experiments, were largely a consequence of synaptic competition that explicitly promoted connectivity in underconnected neurons, while "punishing" overconnected cells, leading to a more light-frame, openwork graphs \citep{fiete2010chains}. The change in modularity observed in our network supports results previously described in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and different implementations of STDP \citep{stam2010modular,litwin2014assemblies}. In our simulations, we did not see a change in the number of neuronal ensembles, but we believe that it is only because our experiments were not well suited for ensemble detection, as we worked with a strong shared input that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
+The changes in degree distribution, observed both in the model and in imaging experiments, were largely a consequence of synaptic competition that explicitly promoted connectivity in underconnected neurons, while "punishing" overconnected cells, creating more light-frame, openwork graph structures \citep{fiete2010chains}. The change in modularity observed in our network supports results previously described in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and different implementations of STDP \citep{stam2010modular,litwin2014assemblies}. We did not observe changes in the number of neuronal ensembles, but we believe that it is only because our experiments were not well suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous,pietri2017emergence}.
 
-The sensitivity analysis showed that of all modeling assumptions, the presence of patterned visual stimulation was the most important. The model converged to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if sensory inputs were kept random. Moreover, as long as intrinsic plasticity was present, the model became sensitive to looming stimuli on a sell-by-cell basis, as well as in terms of  total response. It was not critical for the model to be trained on looming stimuli, as we originally expected; it performed almost as well well with a mix of translational, receding, and oblique looming stimuli, which means that it is stimulus locality and edge continuity that mattered for the development. This also suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of a shade with a sharp edge moving across the visual field.
+The sensitivity analysis showed that of all modeling assumptions, the presence of patterned visual stimulation was the most important. The model converged to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if sensory inputs were kept random. Moreover, it was not critical for the model to be trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, which means that it is stimulus locality and edge continuity that mattered for the development. This also suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Note that our model predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but contradicts some experiemntal observations from zebrafish \citep{pietri2017emergence}.
 
-At the same time, the ability to select a subset of cells to build a reliable looming detector relied on an assumption that in development the animal has access to both “training” looming stimuli and a learning signal. We assume that in tadpoles, this learning signal may come both from dimming receptors in the retina \citep{baranauskas2012}, and mechanosensory and lateral line receptors in the body \citep{truszkowski2017}, and that it acts on tectal connections to the reticulospinal neurons in the hindbrain, selecting a subset of inputs that are most active immediately before the collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each collision, potentially allowing a tadpole to build several overlapping subnetworks, selective for impeding collisions of different geometry, and projecting to different subsets of motor neurons. Therefore, this type of training could conceivably lead to the development of nuanced escape responses that use spatial context to optimize avoidance behaviors, as described in tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
+At the same time, to arrange a subset of tectal outputs in a reliable looming detector, a developing brain would need access to both “training” looming stimuli, and a learning signal. We assume that in tadpoles, this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs may trigger plasticity in connections from the tectum to the hindbrain reticulospinal neurons, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each collision, allowing a tadpole to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons. Therefore, this type of training could lead to the development of spatially nuanced escape responses that use context to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
 
-A relatively poor fit between network predictions and biological experiments can also be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as the tectum is about 40 cells across [XXX], and packed 6-10 cells deep in its thickest part [XXX], while tapering towards the edges [XXX]. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
+A relatively poor fit between network predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as the tectum is about 40 cells across [XXX], and packed 6-10 cells deep in its thickest part [XXX], while tapering towards the edges [XXX]. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
 
 The best way to address these concerns would be to run a set of control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired whole-cell recordings, probing connections by brief depolarization of one cell and recording of synaptic currents in the other. Unfortunately, this type of experiments was beyond our technical ability, so we had to rely on indirect signs of successful network reconstruction. Two most important observations that support our results, are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were assured by the replication of tectal response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), and observation of retinotopy during responses to looming stimuli. We therefore conclude that selective staining of neurons in a living brain, followed by high-speed ($\sim$100 frames/s) calcium imaging, allows reconstruction of directed local network connectivity.
 
