--- a/refs.bib
+++ b/refs.bib
@@ -19,6 +19,15 @@
   publisher={Nature Publishing Group}
 }
 
+@article{bashivan2018neural,
+  title={Neural Population Control via Deep Image Synthesis},
+  author={Bashivan, Pouya and Kar, Kohitij and DiCarlo, James},
+  journal={bioRxiv},
+  pages={461525},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @article{bollmann2009,
   title={Subcellular topography of visually driven dendritic activity in the vertebrate visual system},
   author={Bollmann, Johann H and Engert, Florian},
@@ -50,17 +59,6 @@
   publisher={Wiley Online Library}
 }
 
-@article{munch2009,
-  title={Approach sensitivity in the retina processed by a multifunctional neural circuit},
-  author={M{\"u}nch, Thomas A and Da Silveira, Rava Azeredo and Siegert, Sandra and Viney, Tim James and Awatramani, Gautam B and Roska, Botond},
-  journal={Nature neuroscience},
-  volume={12},
-  number={10},
-  pages={1308},
-  year={2009},
-  publisher={Nature Publishing Group}
-}
-
 @article{felch2016,
   title={Multisensory integration in the developing tectum is constrained by the balance of excitation and inhibition},
   author={Felch, Daniel L and Khakhalin, Arseny S and Aizenman, Carlos D},
@@ -79,6 +77,16 @@
   pages={563--576},
   year={2010},
   publisher={Elsevier}
+}
+
+@article{huberman2008waves,
+  title={Mechanisms underlying development of visual maps and receptive fields},
+  author={Huberman, Andrew D and Feller, Marla B and Chapman, Barbara},
+  journal={Annu. Rev. Neurosci.},
+  volume={31},
+  pages={479--509},
+  year={2008},
+  publisher={Annual Reviews}
 }
 
 @article{jang2016,
@@ -112,6 +120,17 @@
   publisher={Nature Publishing Group}
 }
 
+@article{munch2009,
+  title={Approach sensitivity in the retina processed by a multifunctional neural circuit},
+  author={M{\"u}nch, Thomas A and Da Silveira, Rava Azeredo and Siegert, Sandra and Viney, Tim James and Awatramani, Gautam B and Roska, Botond},
+  journal={Nature neuroscience},
+  volume={12},
+  number={10},
+  pages={1308},
+  year={2009},
+  publisher={Nature Publishing Group}
+}
+
 @article{papo2016beware,
   title={Beware of the small-world neuroscientist!},
   author={Papo, David and Zanin, Massimiliano and Mart{\'\i}nez, Johann H and Buld{\'u}, Javier M},
@@ -132,6 +151,15 @@
   publisher={Elsevier}
 }
 
+@article{pratt2013review,
+  title={Modeling human neurodevelopmental disorders in the Xenopus tadpole: from mechanisms to therapeutic targets},
+  author={Pratt, Kara G and Khakhalin, Arseny S},
+  journal={Disease models \& mechanisms},
+  pages={dmm--012138},
+  year={2013},
+  publisher={The Company of Biologists Ltd}
+}
+
 @article{reimann2017,
   title={Cliques of neurons bound into cavities provide a missing link between structure and function},
   author={Reimann, Michael W and Nolte, Max and Scolamiero, Martina and Turner, Katharine and Perin, Rodrigo and Chindemi, Giuseppe and D{\l}otko, Pawe{\l} and Levi, Ran and Hess, Kathryn and Markram, Henry},
@@ -140,6 +168,17 @@
   pages={48},
   year={2017},
   publisher={Frontiers}
+}
+
+@article{rubinov2011,
+  title={Neurobiologically realistic determinants of self-organized criticality in networks of spiking neurons},
+  author={Rubinov, Mikail and Sporns, Olaf and Thivierge, Jean-Philippe and Breakspear, Michael},
+  journal={PLoS computational biology},
+  volume={7},
+  number={6},
+  pages={e1002038},
+  year={2011},
+  publisher={Public Library of Science}
 }
 
 @article{sporns2005,
@@ -162,26 +201,6 @@
   pages={743--754},
   year={2016},
   publisher={Elsevier}
-}
-
-@article{rubinov2011,
-  title={Neurobiologically realistic determinants of self-organized criticality in networks of spiking neurons},
-  author={Rubinov, Mikail and Sporns, Olaf and Thivierge, Jean-Philippe and Breakspear, Michael},
-  journal={PLoS computational biology},
-  volume={7},
-  number={6},
-  pages={e1002038},
-  year={2011},
-  publisher={Public Library of Science}
-}
-
-@article{pratt2013review,
-  title={Modeling human neurodevelopmental disorders in the Xenopus tadpole: from mechanisms to therapeutic targets},
-  author={Pratt, Kara G and Khakhalin, Arseny S},
-  journal={Disease models \& mechanisms},
-  pages={dmm--012138},
-  year={2013},
-  publisher={The Company of Biologists Ltd}
 }
 
 @article{xu2011,
