--- a/table1.tex
+++ b/table1.tex
@@ -43,8 +43,8 @@ Stim. decoding, change & = & \land & \land & \land & \lor & \land & \land \lor \
 \hline
 PCA complexity & = & \land & \land & \land \lor & \land & \land & \land\\
 N Ensembles, change & \times & \times & \times & \times & \times & \times & \times \\
-Ensembles spatially local & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
-Ensembles overconnected & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark\\
+Ensembles are spatially local & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
+Ensembles are overconnected & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark\\
 \% two-way edges, change & \lor & \lor & \lor \land & \lor & \lor & \lor & \lor \\
 \hline
 \multicolumn{8}{l}{\textbf{Connected cells:}}\\
